$Id$

****************************** DRUPAL 5 BRANCH ********************************

June 6, 2008
------------
#241982 by Michelle: Fixed install function for filling table so it doesn't give warnings and returns success/failure properly. Since it was filling the table even with the warnings, there's no need to rerun this.

June 5, 2008
------------
#241982 by Michelle: Added function to .install to fill last post table with initial values.
#241982 by Michelle: Adjusted comment link to account for multiple pages.
#241982 by Michelle: Added icon linked to most recent comment. (Theme changes: advf-forum-submitted.tpl.php, added newest_comment.gif)
#266765 by aMakUzr: Fixed class markup on forum posts.

June 3, 2008
------------
#242527 by Michelle: Initialized view count to 0 so it doesn't show blank when no views of topic.
#208440 by Michelle: Made reference post use forum theme when replying. Also removed links from comment in reply mode. 
#260397 by c-c-m: Added Spanish translation.
#241982 by Michelle: Updated variable list in comments of advf-forum-submitted.tpl.php to account for changes.

June 2, 2008
------------
#241982 by Michelle: Added checking to see if last topic has been deleted or unpublished. Has had only minimal testing.
#241982 by Michelle: Had a join wrong so it wasn't picking up deleted nodes. Passes some initial testing now.

May 30, 2008
------------
#No issue by Michelle: Added some doxygen comments and moved around some functions for better readability.

May 29, 2008
------------
#241982 by Michelle (based on idea from Bdragon): Use a table to store reference to last posts in forum to replace the monster query.

Still to do: Account for deleted/unpublished comments and nodes. Write something in the install file to backfill table with existing posts. More testing.

Theme changes:
advf-forum-submitted.tpl.php - Added an extra section for adding more info when a comment is the latest.



May 27, 2008
------------