@@ -5,6 +5,8 @@ $Id$
 June 6, 2008
 ------------
 #241982 by Michelle: Fixed install function for filling table so it doesn't give warnings and returns success/failure properly. Since it was filling the table even with the warnings, there's no need to rerun this.
+#242527 by Michelle: Re-fixed the problem with views showing blank instead of 0.
+Re-added advf-forum-repeat-post.tpl.php which somehow got dropped from cvs.
 
 June 5, 2008
 ------------
